# Mend

./: .gitignore  Cargo.toml  README.md  install.sh  output.txt
benches/: e2e.rs  matcher.rs  parser.rs
resources/: example.diff
src/: diff.rs  error.rs  lib.rs  main.rs  parser.rs  patcher.rs
test/: auto_detect_test.rs  patching_test.rs  setup_test_env.sh
test/fixtures/diffs/: chatgpt.diff  claude.diff  utils_farewell.diff  utils_greet.diff
test/fixtures/original/: Personne.java  utils.rs
tests/: auto_detect_test.rs  multi_language_test.rs  patching_test.rs  sanitizer_test.rs  whitespace_robustness_test.rs
tests/fixtures/diffs/: malformed_llm.diff  missing_prefixes.diff  utils_farewell.diff
tests/fixtures/multilang/lua/: expected.lua  patch.diff  source.lua
tests/fixtures/multilang/python/: expected.py  patch.diff  source.py
tests/fixtures/multilang/rust/: expected.rs  patch.diff  source.rs
tests/fixtures/multilang/typescript/: expected.ts  patch.diff  source.ts
tests/work/: chatgpt.diff  gemini.diff
