[package]
name = "mend"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
is-terminal = "0.4.16"
once_cell = "1.21.3"
regex = "1.11.1"

[[test]]
name = "auto_detect_test"
path = "test/auto_detect_test.rs"

[[test]]
name = "patching_test"
path = "test/patching_test.rs"