[package]
name = "mend"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
is-terminal = "0.4.16"
regex = "1.11.1"
clipboard = "0.5.0"
lcs = "0.2.0"

[[test]]
name = "auto_detect_test"
path = "tests/auto_detect_test.rs"

[[test]]
name = "patching_test"
path = "tests/patching_test.rs"